examples/test/testpolicy6922.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6922
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key12: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value38
          key33: value36
      podSelector:
        matchLabels:
          key32: value1
          key39: value37
